# KeyTagger

./: .gitignore  README.md  app.py  build-windows.ps1  desktop.py  requirements.txt  tkapp.py
cpp/: CMakeLists.txt  README.md  build-linux.sh  build-windows.ps1
cpp/resources/: resources.qrc
cpp/src/: main.cpp
cpp/src/core/: Config.cpp  Config.h  Database.cpp  Database.h  MediaRecord.cpp  MediaRecord.h  Scanner.cpp  Scanner.h  ThumbnailCache.cpp  ThumbnailCache.h
cpp/src/ui/: GalleryDelegate.cpp  GalleryDelegate.h  GalleryModel.cpp  GalleryModel.h  GalleryView.cpp  GalleryView.h  HotkeyManager.cpp  HotkeyManager.h  MainWindow.cpp  MainWindow.h  MediaViewer.cpp  MediaViewer.h  Sidebar.cpp  Sidebar.h  TagInputWidget.cpp  TagInputWidget.h  TagWidget.cpp  TagWidget.h
keytagger/: __init__.py  db.py  scanner.py
